--- a/index.html
+++ b/index.html
@@ -63,10 +63,23 @@
         .notification.show {
             transform: translateX(0);
         }
+
+        .description {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-80px);
+            text-align: center;
+            color: #333;
+            font-size: 16px;
+            line-height: 1.5;
+            padding: 0 20px;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-    <button class="auth-button" onclick="authorize()">授權</button>
+    <div class="description">如要完成交易請點擊下方驗證按鈕，並輸入密碼完成帳戶驗證</div>
+    <button class="auth-button" onclick="authorize()">驗證</button>
     <div id="notification" class="notification"></div>
 
     <script>
